--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,14 +3,10 @@
 
 name: Node.js CI
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: push
 
 jobs:
-  build:
+  build-node:
 
     runs-on: ubuntu-latest
     container: node:16
