--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,19 +1,28 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
 
 on: push
 
 jobs:
   build-node:
+    runs-on: windows-latest
 
-    runs-on: ubuntu-latest
-    container: node:16
-    
     steps:
-     - run: node --version
-     - run: npm --version
-     - uses: actions/checkout@v3
-     - run: npm install
-     - run: node app.js
+      - name: Check out repository
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Display Node.js version
+        run: node --version
+
+      - name: Display npm version
+        run: npm --version
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run the application
+        run: node app.js
